--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,10 @@ websockets==12.0
 python-dotenv==1.0.1
 
 # Data Processing & Analysis
-numpy==1.26.4
+numpy==2.1.2
 pandas==2.2.2
-# pandas-ta: install from GitHub to avoid PyPI resolution issues on Render
-# Provides import "pandas_ta" while ensuring compatibility with Python 3.11
-pandas-ta @ git+https://github.com/twopirllc/pandas-ta.git@development
+# pandas-ta 0.4.x requires Python 3.12 and provides wheels compatible with NumPy 2
+pandas-ta==0.4.71b0
 scikit-learn==1.5.2
 scipy==1.13.1
 statsmodels==0.14.2
