Render-safe stack: PyPI-only deps, MT5 guard, lean Dockerfile

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,27 @@
-# Global Agent Hub - Render Compatible Requirements
-# Core Framework
+# --- web / api ---
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
-httpx==0.27.2
-websockets==12.0
-python-dotenv==1.0.1
+pydantic==2.9.2
 
-# Data Processing & Analysis
-numpy==2.1.2
-pandas==2.2.2
-# pandas-ta 0.4.x requires Python 3.12 and provides wheels compatible with NumPy 2
-pandas-ta==0.4.71b0
+# --- async / infra ---
+aiohttp==3.10.10
+websockets==13.1
+redis==5.0.1
+python-dotenv==1.0.1
+PyYAML==6.0.2
+
+# --- data / ml ---
+numpy==1.26.4
+pandas==2.2.3
+# Use PyPI pandas-ta (no git installs). 0.3.14b works on Linux.
+pandas-ta==0.3.14b
 scikit-learn==1.5.2
 scipy==1.13.1
 statsmodels==0.14.2
-networkx==3.3
 
-# Market Data & Brokers
-ccxt==4.4.20
-oandapyV20==0.7.2
-fxcmpy==1.2.6
-metaapi-cloud-sdk==25.1.0
-yfinance==0.2.28
+# --- brokers / bridges (optional) ---
+# MetaTrader5 has NO Linux wheels. Only install on Windows hosts:
+MetaTrader5==5.0.45; platform_system == "Windows"
 
-# Async & HTTP
-aiohttp==3.10.5
-redis==5.0.1
-tenacity==8.5.0
-
-# Configuration & Utilities
-pyyaml==6.0.2
-pydantic==2.5.0
-pydantic-settings==2.1.0
-structlog==23.2.0
-python-json-logger==2.0.7
-python-dateutil==2.8.2
-pytz==2023.3
-
-# Security
-cryptography==41.0.8
-passlib[bcrypt]==1.7.4
-
-# Development & Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-black==23.11.0
-flake8==6.1.0
+# --- testing / dev (optional) ---
+pytest==8.3.3
