--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -25,11 +25,15 @@ jobs:
             pip install --no-cache-dir -r requirements.txt
           fi
 
-      - name: Verify pandas-ta import
+      - name: Verify ta import and RSI smoke test
         run: |
           python - << 'PY'
-          import pandas_ta as ta
-          print('pandas_ta version:', getattr(ta, '__version__', 'unknown'))
+          import ta, pandas as pd
+          s = pd.Series([1.0, 1.1, 1.2, 1.15, 1.18, 1.22, 1.25, 1.27, 1.29, 1.3])
+          rsi = ta.momentum.rsi(s, window=3)
+          print('ta version:', getattr(ta, '__version__', 'unknown'))
+          print('RSI last value:', float(rsi.iloc[-1]))
+          assert rsi.iloc[-1] == rsi.iloc[-1], 'RSI should be a number'
           PY
 
       - name: Launch API server
