--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-# web
-fastapi
-uvicorn
+fastapi==0.115.5
+uvicorn[standard]==0.30.6
+aiohttp>=3.9
+httpx>=0.24
+ta>=0.11
+pandas>=2.0
+numpy>=1.24
+pytest>=7.4
 aiohttp
-requests
+pydantic>=2
+requests==2.32.3
 pydantic>=2
 
 # data
