--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,12 @@
-# ---- web stack (compatible set for Render Python 3.11) ----
-fastapi==0.110.0
+fastapi==0.115.5
 starlette==0.37.2
-pydantic==2.6.4
-pydantic-core==2.16.3
-uvicorn[standard]==0.29.0
+uvicorn[standard]==0.30.6
+pydantic==2.8.2
+pydantic-core==2.20.1
+anyio==4.4.0
+typing-extensions==4.12.2
+
 requests==2.32.3
-
-# ---- numerics / tools (safe for py3.11) ----
-numpy==1.26.4
-pandas==2.2.2
-python-dateutil==2.9.0.post0
-
-# Optional persistence
-redis==5.0.8
-
-# Indicators (use ta; avoid pandas-ta)
-ta==0.11.0
-
-# ---- other libs used by the project ----
-aiohttp==3.10.5
-httpx==0.27.2
-PyYAML==6.0.2
 python-dotenv==1.0.1
-pytest==8.4.2
-
-# DO NOT add MetaTrader5 here (Render Linux). Use guarded import at runtime.
+redis==5.0.8
+httpx==0.27.2
