--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
-fastapi==0.115.5
-starlette==0.37.2
-uvicorn[standard]==0.30.6
-pydantic==2.8.2
-pydantic-core==2.20.1
-anyio==4.4.0
-typing-extensions==4.12.2
+# API stack (pydantic v1 line)
+fastapi==0.103.2
+starlette==0.27.0
+pydantic==1.10.13
+uvicorn[standard]==0.23.2
 
-requests==2.32.3
-python-dotenv==1.0.1
-redis==5.0.8
+# HTTP + optional cache
+requests==2.31.0
 httpx==0.27.2
+redis==5.0.1
+
+# Core scientific stack with wheels available on Render free image
+numpy==1.26.4
+pandas==2.2.2
+
+# Technical indicators (Bukosabino 'ta' – NOT pandas-ta)
+ta==0.11.0
