--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,14 @@ pydantic==1.10.13
 uvicorn[standard]==0.23.2
 
 # HTTP + optional cache
-requests==2.31.0
+requests==2.32.3
 httpx==0.27.2
 redis==5.0.1
 
 # Core scientific stack with wheels available on Render free image
 numpy==1.26.4
-pandas==2.2.2
+pandas==2.1.1
 
 # Technical indicators (Bukosabino 'ta' – NOT pandas-ta)
 ta==0.11.0
+yfinance==0.2.43
