--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,8 @@
-# API stack (pydantic v1 line)
 fastapi==0.103.2
-starlette==0.27.0
 pydantic==1.10.13
-uvicorn[standard]==0.23.2
-
-# HTTP + optional cache
-requests==2.32.3
-httpx==0.27.2
-redis==5.0.1
-
-# Core scientific stack with wheels available on Render free image
-numpy==1.26.4
-pandas==2.1.1
-
-# Technical indicators (Bukosabino 'ta' – NOT pandas-ta)
+uvicorn==0.23.2
 ta==0.11.0
+pandas==2.1.1
 yfinance==0.2.43
+requests==2.32.3
+numpy==1.26.4
