--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,13 @@
 {
-  "builds": [
-    { "src": "api/index.py", "use": "@vercel/python" },
-    { "src": "api/healthz.py", "use": "@vercel/python" },
-    { "src": "api/ta_decision.py", "use": "@vercel/python" },
-    { "src": "api/run_once.py", "use": "@vercel/python" }
-  ],
+  "functions": { "api/**/*.py": { "maxDuration": 10, "memory": 1024 } },
   "routes": [
-    { "src": "/(.*)", "dest": "api/index.py" },
-    { "src": "/api/healthz", "dest": "api/healthz.py" },
-    { "src": "/api/ta_decision", "dest": "api/ta_decision.py" },
-    { "src": "/api/run_once", "dest": "api/run_once.py" }
-  ],
-  "functions": {
-    "api/**/*.py": {
-      "runtime": "python3.11"
+    {
+      "src": "/api/(.*)",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET,POST,OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type"
+      }
     }
-  }
+  ]
 }
